[package]
name = "telegram-bot-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
worker = "0.3.4" # Updated to latest version
wasm-bindgen = "0.2.93" # Explicitly include compatible version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
hex = "0.4"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
