[package]
name = "telegram-bot-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
worker = "0.6.6" # Updated to latest version
wasm-bindgen = "0.2.93"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.23", features = ["json"] } # Updated
rand = "0.9.2" # Updated
getrandom = { version = "0.2", features = ["js"] } # Added with "js" feature
hex = "0.4"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
