[package]
name = "telegram-bot-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
worker = "0.6.6"
wasm-bindgen = "0.2.93"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.23", features = ["json"] }
rand = "0.9.2"
getrandom = { version = "0.3.3", features = ["js"] }
hex = "0.4"
console_error_panic_hook = "0.1"
